syntax = "proto3";
package kinesisbutler;

service ConsumerService {
  rpc GetRecords(GetRecordsRequest) returns (stream GetRecordsResponse);
  rpc CheckpointLease(CheckpointLeaseRequest) returns (CheckpointLeaseResponse);
}

message GetRecordsRequest {
  string app_name = 1;
  repeated string streams = 2;
}

message GetRecordsResponse {
  repeated DataRecord records = 1;
}

message CheckpointLeaseRequest {
  Lease lease = 1;
  string sequence_number = 2;
}

message CheckpointLeaseResponse {
  Lease lease = 1;
  string sequence_number = 2;
}

message Lease {
  string stream_name = 1;
  string shard_id = 2;
  string consumer_arn = 3;
}

message DataRecord {
  string sequence_number = 1;
  string timestamp = 2;
  string partition_key = 3;
  string encryption_type = 4;
  bytes data = 5;
  Lease lease = 6;
}
